force-app/main/default/objects/User/fields/ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>ID_18_Char__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID 18 Char</label>
    <type>Text</type>
</CustomField>