force-app/main/default/objects/User/fields/Opportunity_Ownership_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ownership_Value__c</fullName>
    <inlineHelpText>There can be only one active user per region</inlineHelpText>
    <label>Opportunity Ownership Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>AU/NZ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>