force-app/main/default/objects/User/fields/s4g_currencies__EndPoint__c.field-meta.xml
<CustomField>
    <fullName>s4g_currencies__EndPoint__c</fullName>
    <formula>$Api.Partner_Server_URL_160</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndPoint</label>
    <type>Text</type>
</CustomField>