force-app/main/default/objects/User/fields/Service_Level_c__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_c__c</fullName>
    <formula>Case(UserRole.Name , 

  &quot;Stefanini Management&quot;, &quot;Service Desk Level 1&quot;,
  &quot;Global Service Desk Level 1&quot;, &quot;Service Desk Level 1&quot;, 
  &quot;Global Service Desk Level 2&quot;, &quot;Service Desk Level 2&quot;, 
  &quot;Global Service Desk Level 3 IT&quot;, &quot;Service Desk IT Level 3&quot;, 
  &quot;Global Service Desk Level 3 Delivery&quot;, &quot;Service Desk Delivery Level 3&quot;,
  &quot;Global Service Desk Level 3 Finance&quot;, &quot;Service Desk Finance Level 3&quot;,

null 
)</formula>
    <label>Service Level</label>
    <type>Text</type>
</CustomField>