force-app/main/default/objects/User/fields/User_Region_Reassign__c.field-meta.xml
<CustomField>
    <fullName>User_Region_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Any Opportunities created that would normal be assigned to this user (Owned) will be reassigned to one of the default Regions</inlineHelpText>
    <label>User Region Reassign</label>
    <type>Checkbox</type>
</CustomField>