force-app/main/default/objects/User/listViews/Inactive_Users.listView-meta.xml
<ListView>
    <fullName>Inactive_Users</fullName>
    <columns>IS_FROZEN</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>LOCALE</columns>
    <columns>User_Region__c</columns>
    <columns>MARKETING_USER</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>notContain</operation>
        <value>salesforcebackup</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>no expiry</value>
    </filters>
    <label>Inactive Users</label>
</ListView>